# routes/public-routes.php
@@ -2,8 +2,4 @@
 return [
     '/oauth/[a:provider]/redirect',
     '/oauth/[a:provider]/callback',
-    '/auth/login',
-    '/auth/register',
-    '/auth/forgot-password',
-    '/auth/reset-password',
 ];
